--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
         BBA and MPA at The Univeristy of Texas at Austin 
       </a>
     </div>  
+    <div class = "item">
+      <img src = "https://cdn.britannica.com/49/1949-004-8818300C/Flag-South-Korea.jpg"> 
+      <a target ="_blank" href="https://www.korea.net/"> 
+        Home Country: South Korea 
+      </a>
+    </div>  
 
   </div>
 </body>
