--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
 </head>
 <style> 
   body {
@@ -85,10 +87,10 @@
   </div>
   <div class = "social-icons-rows">
     <a href="https://gitHub.com/sehwang2" target = "_blank">
-      <img class = "logo-image"  img src = "https://github.githubassets.com/assets/GitHub-Logo-ee398b662d42.png" alt="Github">
+      <i class="fa-brands fa-github"></i> 
     </a>
     <a href="https://www.linkedin.com/in/seong-yoon/" target = "_blank">
-      <img class = "logo-image" img src= "https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg" alt="LinkedIn">
+      <i class="fa-brands fa-linkedin"></i>
     </a>
   </div>
   <div class = "links-row">
